Add and modify avs/operator all addresses route
